Changes in the service for url generation api.
