# shorten-url/api/controllers/url-service.js
@@ -11,7 +11,7 @@
   It is a good idea to list the modules that your application depends on in the package.json in the project root
  */
 var util = require('util');
-const User = require('../domain/user');
+const Url = require('../domain/url');
 
 const Logger = require('bunyan');
 
@@ -31,7 +31,7 @@ const log = new Logger.createLogger({
 const userSignup = (req, res) => {
     // variables defined in th,e Swagger document can be referenced using req.swagger.params.{parameter_name}
     let user = req.swagger.params.body.value;
-    User.userSignup(user)
+    Url.userSignup(user)
       .then(resp=>{
         res.set('Content-Type', 'application/json');
         res.json(resp);
@@ -44,7 +44,48 @@ const userSignup = (req, res) => {
 
 const userLogin = (req, res) => {
   let {userName, password} = req.swagger.params.body.value;
-    User.userLogin(userName, password)
+    Url.userLogin(userName, password)
+      .then(resp=>{
+        res.set('Content-Type', 'application/json');
+        res.json(resp);
+      })
+      .catch(err=>{
+        res.writeHead(err.statusCode, { 'Content-Type': 'application/json' });
+        res.end(JSON.stringify(err));
+      })
+}
+
+const createShortUrl = (req, res) => {
+  let {originalUrl} = req.swagger.params.body.value;
+  let userId = req.swagger.params.userId.value;
+
+    Url.createShortUrl(userId, originalUrl)
+      .then(resp=>{
+        res.set('Content-Type', 'application/json');
+        res.json(resp);
+      })
+      .catch(err=>{
+        res.writeHead(err.statusCode, { 'Content-Type': 'application/json' });
+        res.end(JSON.stringify(err));
+      })
+}
+
+const redirectToUrl = (req, res, next) => {
+  let shortId = req.swagger.params.shortId.value;
+    Url.redirectUrl(shortId)
+      .then(resp=>{
+        res.set('Content-Type', 'application/json');
+        res.redirect(resp, next);
+      })
+      .catch(err=>{
+        res.writeHead(err.statusCode, { 'Content-Type': 'application/json' });
+        res.end(JSON.stringify(err));
+      })
+}
+
+const getUrlForUser = (req, res) => {
+  let userId = req.swagger.params.userId.value;
+  Url.getUrlForUser(userId)
       .then(resp=>{
         res.set('Content-Type', 'application/json');
         res.json(resp);
@@ -57,5 +98,8 @@ const userLogin = (req, res) => {
 
 module.exports = {
   userSignup, 
-  userLogin
+  userLogin,
+  createShortUrl,
+  redirectToUrl,
+  getUrlForUser
 };
