# shorten-url/api/domain/url.js
@@ -1,4 +1,6 @@
 const auth = require('../helpers/auth/auth');
+var short = require('short-uuid');
+
 var dbconfig = require('../../config/db');
 var rdb = require('rethinkdbdash')({
     pool: true,
@@ -27,9 +29,11 @@ const userSignup = (user) =>{
                 }
                 if(users.length>0)
                     return reject(errResponse);
+                let userId = short.generate();
+                user.userId = userId;
                 rdb.table("users").insert(user).run()
                     .then(resp => {
-                        resolve({userId: resp.generatedKeys[0]});            
+                        resolve({userId});            
                     })
                     .catch(err =>{
                         return reject(errResponse);
@@ -76,7 +80,72 @@ const userLogin = (userName, reqPassword) =>{
     })
 }
 
+const createShortUrl = (userId, originalUrl) =>{
+    return new Promise((resolve,reject)=>{
+        let response;
+        let shortId = short.generate();
+        let mapObj = {
+            shortId,
+            userId,
+            originalUrl
+        }
+        rdb.table("url_maps").insert(mapObj).run()
+            .then((resp)=>{
+                resolve({url: `http://localhost:${process.env.PORT}/v2/url/${shortId}`});
+            })
+            .catch((err)=>{
+                response = {
+                    message: "Could not generate url",
+                    errorCode: "url-shorten-service_4",
+                    statusCode: 500
+                }
+                reject(response);
+            })
+    })
+}
+
+const redirectUrl = (shortId) =>{
+    return new Promise((resolve,reject)=>{
+        var response = {
+            message: "No url for this id.",
+            statusCode: 404,
+            errorCode: "url-shorten-service_5"
+        }
+        rdb.table("url_maps").get(shortId).run()
+            .then((item)=>{
+                if(item.hasOwnProperty("originalUrl"))
+                    return resolve(item.originalUrl);
+                else{
+                    reject(response);
+                }
+            })
+            .catch(err=>{
+                reject(response);
+            })
+    })
+}
+
+const getUrlForUser = (userId) =>{
+    return new Promise((resolve,reject)=>{
+        rdb.table("url_maps").filter({userId}).run()
+            .then((resp)=>{
+                resolve(resp);
+            })
+            .catch((err)=>{
+                let response = {
+                    message: "Could not get all url",
+                    errorCode: "url-shorten-service_6",
+                    statusCode: 500
+                }
+                reject(response);
+            })
+    })
+}
+
 module.exports = {
     userSignup,
-    userLogin
+    userLogin,
+    createShortUrl,
+    redirectUrl,
+    getUrlForUser
 }
