# shorten-url/api/swagger/swagger.yaml
@@ -5,7 +5,7 @@ info:
 # during dev, should point to your local machine
 host: localhost:7080
 # basePath prefixes all resource paths 
-basePath: /v2/url-shorten-service
+basePath: /v2
 # 
 schemes:
   # tip: remove http to make production-grade
@@ -17,10 +17,41 @@ consumes:
 # format of the responses to the client (Accepts)
 produces:
   - application/json
+securityDefinitions:
+  UserSecurity:
+    type: apiKey
+    in: header
+    name: Authorization
 paths:
+  /url/{shortId}:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: url-service
+    get:
+      tags:
+        - "URL"
+      description: redirect to the url
+      # used as the method name of the controller
+      operationId: redirectToUrl
+      parameters:
+        - name: "shortId"
+          in: "path"
+          description: "shortId of the url"
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/UrlResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /signup:
     # binds a127 app logic to a route
-    x-swagger-router-controller: user-service
+    x-swagger-router-controller: url-service
     post:
       tags:
         - "User"
@@ -46,7 +77,7 @@ paths:
             $ref: "#/definitions/ErrorResponse"
   /login:
     # binds a127 app logic to a route
-    x-swagger-router-controller: user-service
+    x-swagger-router-controller: url-service
     post:
       tags:
         - "User"
@@ -65,6 +96,67 @@ paths:
           schema:
             # a pointer to a definition
             $ref: "#/definitions/UserLoginResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /user/{userId}/url:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: url-service
+    post:
+      tags:
+        - "URL"
+      description: Create short url for the user
+      security: 
+        - UserSecurity: []
+      # used as the method name of the controller
+      operationId: createShortUrl
+      parameters:
+        - name: "userId"
+          in: "path"
+          description: "userId of the user requesting url"
+          required: true
+          type: string
+        - in: "body"
+          name: "body"
+          required: true
+          schema:
+              $ref: "#/definitions/UrlRequest"
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/UrlResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /user/{userId}/url/all:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: url-service
+    get:
+      tags:
+        - "URL"
+      description: Get all the url bindings for the user
+      security: 
+        - UserSecurity: []
+      # used as the method name of the controller
+      operationId: getUrlForUser
+      parameters:
+        - name: "userId"
+          in: "path"
+          description: "userId of the user requesting url"
+          required: true
+          type: string        
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/UrlResponse"
         # responses may fall through to errors
         default:
           description: Error
@@ -98,10 +190,20 @@ definitions:
         type: string
       password:
         type: string
+  UrlRequest:
+      required:
+        - originalUrl
+      properties:
+        originalUrl:
+          type: string
   UserResponse:
     properties:
       userId: 
         type: string
+  UrlResponse:
+    properties:
+        url:
+          type: string
   UserLoginResponse:
     properties:
       token: 
